--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,6 @@
     background-color: var(--azul-oscuro);
     padding: 20px 40px;
     border-radius: 0px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     width: 500px;
     height: 100px;
     position: absolute;
@@ -407,86 +406,91 @@
   object-fit: cover;
   display: block;
 }
-
-
-
-.contacto{
-    background-color: var(--gris);
-}
-
-
-
-.contacto {
-    color: var(--amarillo-oscuro);
-    background-color: var(--gris);
-    margin: auto;
-    padding: 40px 30px;
-    text-align: left;
-}
-
-.contacto p{
-  color: var(--azul-oscuro);
-  font-size: large;
-}
-
-.contacto a{
-    color: var(--amarillo-oscuro);
-
-}
-
+/*
 footer {
     text-align: center;
     padding-top: 1rem;
-}
-
-/*.contacto-container{
-  display: flex;
-  flex-direction: row;
-}
-
-.contacto-txt{
-  
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-
-.img-contacto img{
-    width: 470px;
-    height: 300px;
 }*/
+.linea-vertical {
+  width: 3px;
+  background-color: var(--amarillo-oscuro);
+  margin: 60px 0; 
+}
 
-.contacto-primera-linea {
+.contacto {
+  display: flex;
+  width: 100%;
+  background-color: var(--gris);
+
+}
+
+.contacto-txt {
+  flex: 1;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  margin-top: 0;
+}
+
+.contacto.txt h1 {
+  font-size: 48px;
+  color: var(--azul-oscuro);
+}
+
+.contacto-txt p {
+  font-size: 18px;
+  color: var(--azul-oscuro);
+}
+
+.contact-icon {
+  display: flex;
+  gap: 15px;
+}
+
+.contact-icon a {
+  text-decoration: none;
+  background-color: var(--azul-oscuro);
+  color: var(--gris);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 30px;
+  font-size: 18px;
 }
 
-.linea-vertical {
-  width: 4px;
-  height: 380px;
-  background-color: var(--amarillo-oscuro);
-  flex-shrink: 0;
+.img-contacto {
+  flex: 1;
+  position: relative;
+  overflow: hidden;
 }
-.img-contacto img{
-    width: 550px;
-    height: 350px;
+
+.img-contacto img {
+  padding-top: 4rem;
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+  filter: brightness(0.9) saturate(1.1);
 }
-.contacto-txt{
-    width: 35%;
-    display: flex;
+
+footer {
+  background-color:var(--gris);
+  text-align: center;
+  color: var(--azul-oscuro);
+}
+
+@media (max-width: 768px) {
+  .contacto {
     flex-direction: column;
-    justify-content: space-around;
+  }
+  .contacto.txt, .img-contacto {
+    flex: none;
+    width: 100%;
+  }
 }
-
-.img-contacto{
-    width: 60%;
-}
-
-
 .icon-circle {
   background-color: var(--azul-oscuro);
   color: var(--gris);
@@ -667,7 +671,7 @@ footer {
   .works-grid::-webkit-scrollbar {
     display: none; 
   }
-
+/*
   .contacto-primera-linea {
     flex-direction: row;
     align-items: center;
@@ -684,7 +688,7 @@ footer {
     max-width: 400px;
     text-align: end;
   }
-
+*/
   .icon-circle {
     width: 40px;
     height: 40px;
@@ -722,6 +726,30 @@ footer {
   width: 180px;
   height: 90px;
 }
+
+.personas {
+    flex-direction: column;
+    gap: 2rem; 
+  }
+
+  .persona {
+    flex-direction: column;
+    width: 90%;
+    height: auto;
+    padding: 1rem;
+  }
+
+  .persona img,
+  .persona1 img {
+    width: 200px;
+    height: auto;
+  }
+
+  .persona .titles {
+    padding-left: 0;
+    text-align: center;
+    margin-top: 1rem;
+  } 
 
 @media screen and (max-width:391px){
   .navbar a{
@@ -812,4 +840,8 @@ footer {
 .card-about {
   padding: 0;
   box-shadow: none;
+}
+
+.contacto hr{
+  color: var(--azul-oscuro);
 }
