--- a/styles.css
+++ b/styles.css
@@ -279,8 +279,7 @@
 .card-about .parrafo{
   color:var(--azul-oscuro);
   margin: 0;
-  padding: 12px;
-  font-weight: 300;
+  padding: 12px;font-weight: 300;
 }
 
   .about-filter {
@@ -596,6 +595,7 @@ footer {
   }
 
   .img-home {
+    display: none;
     width: 100%;
     height: 250px;
   }
@@ -668,8 +668,8 @@ footer {
   }
 
   .icon-circle {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 45px;
   }
 
   .titulo {
