--- a/styles.css
+++ b/styles.css
@@ -412,21 +412,13 @@ footer {
     text-align: center;
     padding-top: 1rem;
 }*/
-.linea-vertical {
-  width: 4px;
-  background-color: var(--amarillo-oscuro);
-  margin-right: 90px;
-  margin-top: 50px;
-  height: 350px;
-}
-
 .contacto {
   display: flex;
   width: 100%;
   background-color: var(--gris);
 }
 
-.contacto a{
+.contacto a {
   padding-left: 1.3rem;
 }
 
@@ -440,7 +432,7 @@ footer {
   margin-top: 0;
 }
 
-.contacto.txt h1 {
+.contacto-txt h1 {
   font-size: 48px;
   color: var(--azul-oscuro);
 }
@@ -454,37 +446,86 @@ footer {
   flex: 1;
   position: relative;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .img-contacto img {
   padding-top: 4rem;
-  width: 100%;
-  height: 70%;
+  width: 90%;
+  height: auto;
   object-fit: cover;
   filter: brightness(0.9) saturate(1.1);
 }
 
-.contacto hr{
+.linea-vertical {
+  width: 4px;
+  background-color: var(--amarillo-oscuro);
+  margin-right: 90px;
+  margin-top: 50px;
+  height: 350px;
+}
+
+.contacto hr {
   color: var(--azul-oscuro);
   width: 80%;
   height: auto;
 }
 
 footer {
-  background-color:var(--gris);
+  background-color: var(--gris);
   text-align: center;
   color: var(--azul-oscuro);
 }
 
 @media (max-width: 768px) {
   .contacto {
-    flex-direction: column;
+    flex-direction: row;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
   }
-  .contacto.txt, .img-contacto {
-    flex: none;
+
+  .contacto-txt {
+    flex: 1;
+    padding: 10px;
+    gap: 10px;
+    font-size: 14px;
+  }
+
+  .contacto-txt h1 {
+    font-size: 28px;
+  }
+
+  .contacto-txt p {
+    font-size: 14px;
+  }
+  
+  .contact-icon{
+    display: flex;
+  }
+
+  .img-contacto {
+    flex: 1;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }
+
+  .img-contacto img {
+    padding-top: 0;
     width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+
+  .linea-vertical {
+    height: 150px;
+    margin: 0 20px;
   }
 }
+
 .icon-circle {
   background-color: var(--azul-oscuro);
   color: var(--gris);
