--- a/styles.css
+++ b/styles.css
@@ -419,8 +419,10 @@ footer {
   background-color: var(--gris);
 }
 
-.contacto a {
-  padding-left: 1.3rem;
+.contacto img{
+  margin-left: 1.3rem;
+  height: 55px;
+  width: 55px;
 }
 
 .contacto-txt {
@@ -811,6 +813,9 @@ footer {
     }
     .alb{
       margin-top: 20px;
+    }
+    .alb img{
+      margin-left: 1.45rem;
     }
 }
 
