--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@
     background-color: var(--azul-oscuro);
     padding: 20px 40px;
     border-radius: 0px;
-    width: 500px;
+    width: 570px;
     height: 100px;
     position: absolute;
     bottom: -60px;
@@ -169,6 +169,7 @@
     height: 65px;
     margin-bottom: 8px;
     padding-right: 0.3rem;
+    
   }
 
   .stat-num {
@@ -180,6 +181,12 @@
     font-size: 13px;
     color: var(--amarillo-oscuro);
   }
+
+  .linea-vertical-stats {
+  width: 2px;
+  background-color: var(--gris);
+  height: 100%;
+}
 
 
 #quienes{
@@ -419,10 +426,20 @@ footer {
   background-color: var(--gris);
 }
 
+.contact-icon{
+  display: flex;
+  background-color: #E7BD38;
+  padding: 1rem;
+  margin: 1rem;
+  width: 100%;
+  height: 60%;
+
+}
+
 .contacto img{
   margin-left: 1.3rem;
-  height: 55px;
-  width: 55px;
+  height: 45px;
+  width: 45px;
 }
 
 .contacto-txt {
@@ -447,10 +464,15 @@ footer {
 
 
 .alb p,.ser p{
-  font-size: 28px;
+  font-size: 22px;
+  padding-top: 0.3rem;
+  margin-left: 1rem;
 }
 .alb{
   margin-top: 20px;
+}
+.alb img{
+  margin-left: 1.5rem;
 }
 
 .img-contacto {
@@ -778,6 +800,13 @@ footer {
 @media screen and (max-width:391px){
   .navbar a{
     font-size:medium;
+  }
+  .alb p, .ser p{
+    text-align: center;
+  }
+
+  .alb img,.ser img{
+    margin-top: 1rem;
   }
 }
 }
