--- a/styles.css
+++ b/styles.css
@@ -431,7 +431,7 @@ footer {
   background-color: #E7BD38;
   padding: 1rem;
   margin: 1rem;
-  width: 96%;
+  width: 93%;
   height: 60%;
 
 }
@@ -802,6 +802,10 @@ footer {
     height: auto;
     margin-left: 0;
   }
+
+    .persona1 img{
+    height: 250px;
+}
 
   .persona .titles {
     padding-left: 0;
